--- a/app/src/main/res/drawable/rounded_rectangle.xml
+++ b/app/src/main/res/drawable/rounded_rectangle.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="16dp" /> <!-- Corner radius -->
+    <solid android:color="#FFFFFF" /> <!-- Background color -->
+    <stroke android:width="10dp" android:color="#000000" /> <!-- Border -->
+</shape>
