--- a/app/src/main/res/layout/activity_login_activity.xml
+++ b/app/src/main/res/layout/activity_login_activity.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:background="#81bb7b">
+    tools:context=".LoginActivity"
+    android:background="#ffffff">
 
     <LinearLayout
         android:layout_width="match_parent"
