--- a/app/src/main/res/layout/activity_opening_screen.xml
+++ b/app/src/main/res/layout/activity_opening_screen.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#81bb7b"
+    android:background="#ffffff"
     android:orientation="vertical"
     tools:context=".OpeningScreen">
 
