--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#81bb7b"
+    android:background="#ffffff"
     tools:context=".SignUp" >
 
     <TextView
@@ -165,12 +165,11 @@
             android:layout_marginEnd="20dp"/>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonSignUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="SIGN UP"
             android:fontFamily="sans-serif-condensed-medium"
-            android:backgroundTint="@color/design_default_color_on_secondary"
             android:layout_marginTop="20dp"
             android:layout_marginStart="80dp"
             android:layout_marginEnd="80dp"/>
