--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,13 +13,192 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/textViewWelcome"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Hi This is Home Page"
+            android:layout_height="wrap_content"
+            android:text="Welcome"
             android:fontFamily="sans-serif-condensed-medium"
-            android:textSize="30dp"
+            android:textSize="15dp"
             android:textAlignment="center"
             android:layout_marginTop="50dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:background="@android:color/black"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp" />
+
+        <TextView
+            android:id="@+id/textViewTotalExpenses"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="120dp"
+            android:layout_marginEnd="120dp"
+            android:text="Total Expenses This Month"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:textSize="25dp"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"/>
+
+
+        <TextView
+            android:id="@+id/textViewTotalRM"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="80dp"
+            android:layout_marginEnd="80dp"
+            android:text="RM1000.00"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:textSize="35dp"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:background="@android:color/black"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp" />
+
+        <TextView
+            android:id="@+id/textViewQuickActions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="80dp"
+            android:layout_marginEnd="80dp"
+            android:text="Quick Actions"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:textSize="25dp"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"/>
+
+        <LinearLayout
+            android:id="@+id/layoutQuickActions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="30dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_gravity="center">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/add_expenses" />
+
+                    <TextView
+                        android:id="@+id/textViewAddExpenses"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-condensed-medium"
+                        android:text="Add Expenses"
+                        android:layout_marginTop="10dp"
+                        android:textAlignment="center"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:textAlignment="center"
+                    android:layout_marginStart="50dp">
+
+
+                    <ImageView
+                        android:id="@+id/imageViewEditExpenses"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/edit_expenses" />
+
+                    <TextView
+                        android:id="@+id/textViewEditExpenses"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-condensed-medium"
+                        android:text="Edit Expenses"
+                        android:layout_marginTop="10dp"
+                        android:textAlignment="center"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+
+                    <ImageView
+                        android:id="@+id/imageViewViewExpenses"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/view_expenses" />
+
+                    <TextView
+                        android:id="@+id/textViewViewExpenses"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-condensed-medium"
+                        android:text="View Expenses"
+                        android:layout_marginTop="10dp"
+                        android:textAlignment="center"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:textAlignment="center"
+                    android:layout_marginStart="50dp">
+
+
+                    <ImageView
+                        android:id="@+id/imageViewDeleteExpenses"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:src="@drawable/delete_expenses" />
+
+                    <TextView
+                        android:id="@+id/textViewDeleteExpenses"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-condensed-medium"
+                        android:text="Delete Expenses"
+                        android:layout_marginTop="10dp"
+                        android:textAlignment="center"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
+        </LinearLayout>
+
+
+
+
     </LinearLayout>
 
 </FrameLayout>
