--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -97,7 +97,7 @@
 
 
                     <ImageView
-                        android:id="@+id/imageView3"
+                        android:id="@+id/imageViewAddExpenses"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:src="@drawable/add_expenses" />
