--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorActive">#FF5722</color>
     <color name="colorInactive">#757575</color>
+    <color name="yellow">#FCAC12</color>
+    <color name="blue">#0077FF</color>
+    <color name="green">#00A86B</color>
+    <color name="red">#FD3C4A</color>
+    <color name="purple">#7F3DFF</color>
+    <color name="darkgreen">#1abf75</color>
 </resources>
