--- a/app/src/main/res/layout/fragment_edit_expense.xml
+++ b/app/src/main/res/layout/fragment_edit_expense.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="#1ACF9A"
-    tools:context=".EditExpenseFragment">
+    tools:context=".fragment.EditExpenseFragment">
 
     <TextView
         android:id="@+id/total_balance_label"
