--- a/app/src/main/res/layout/fragment_expense.xml
+++ b/app/src/main/res/layout/fragment_expense.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#1ACF9A"
     android:orientation="vertical"
-    tools:context=".ExpenseFragment">
+    tools:context=".fragment.ExpenseFragment">
 
 
     <TextView
@@ -128,7 +128,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                tools:listitem="@layout/expense_item" />
+                tools:listitem="@layout/expense_item_v2" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
