--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,9 @@
     <color name="red">#FD3C4A</color>
     <color name="purple">#7F3DFF</color>
     <color name="darkgreen">#1abf75</color>
+
+    //Naqid Punya
+    <color name="greenz">#81BB7B</color>
+    <color name="light_gray">#D3D3D3</color>
+    <color name="dark_gray">#A9A9A9</color>
 </resources>
