--- a/app/src/main/res/drawable/button_background_v2.xml
+++ b/app/src/main/res/drawable/button_background_v2.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#F0F0F5" />
-    <corners android:radius="40dp" />
+    <solid android:color="#FFFF"/> <!-- Light gray background -->
+    <corners android:radius="99dp"/> <!-- Rounded corners -->
 </shape>
