--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,7 +18,6 @@
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,8 +41,6 @@
                 android:textSize="20dp"
                 android:textColor="@color/black"
                 android:fontFamily="sans-serif-condensed-medium"/>
-
-
         </LinearLayout>
 
         <LinearLayout
@@ -63,18 +60,82 @@
                 android:text="Full Name" />
 
             <EditText
-                android:id="@+id/amountEditText"
+                android:id="@+id/editTextFullName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Your Full Name"
                 android:padding="15dp"
-                android:editable="false"
+                android:layout_marginTop="10dp"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:background="@drawable/edit_text_background" />
+
+            <TextView
+                android:id="@+id/textViewName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Name"
                 android:layout_marginTop="20dp"
                 android:fontFamily="sans-serif-condensed-medium"
-                android:inputType="numberDecimal"
+                android:textColor="@color/black" />
+
+            <EditText
+                android:id="@+id/editTextName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Your Name"
+                android:padding="15dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="sans-serif-condensed-medium"
                 android:background="@drawable/edit_text_background" />
+
+            <TextView
+                android:id="@+id/textViewEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Email"
+                android:layout_marginTop="20dp"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:textColor="@color/black" />
+
+            <EditText
+                android:id="@+id/editTextEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/edit_text_background"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:hint="New Email"
+                android:padding="15dp" />
+
+            <TextView
+                android:id="@+id/textViewPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Password"
+                android:layout_marginTop="20dp"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:textColor="@color/black" />
+
+            <EditText
+                android:id="@+id/editTextPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/edit_text_background"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:hint="New Password"
+                android:inputType="phone"
+                android:padding="15dp" />
+
+            <Button
+                android:id="@+id/buttonSave"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Save"
+                android:layout_marginTop="30dp"
+                android:backgroundTint="@color/black"
+                android:textColor="@color/white"
+                android:fontFamily="sans-serif-condensed-medium"/>
         </LinearLayout>
-
     </LinearLayout>
-
 </LinearLayout>
