--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,11 +9,12 @@
     <item
         android:id="@+id/nav_search"
         android:icon="@drawable/view_expenses"
-        android:title="Expense" />
+        android:title="Expense Summary" />
 
     <item
-        android:id="@+id/nav_profile"
-        android:icon="@drawable/profile"
-        android:title="Profile" />
+        android:id="@+id/nav_settings"
+        android:icon="@drawable/setting"
+        android:title="Setting" />
+
 
 </menu>
