--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="greenz">#81BB7B</color>
     <color name="light_gray">#D3D3D3</color>
     <color name="dark_gray">#A9A9A9</color>
+    <color name="purple_200">#FFBB86FC</color>
 </resources>
