--- a/app/src/main/res/layout/activity_opening_screen.xml
+++ b/app/src/main/res/layout/activity_opening_screen.xml
@@ -13,9 +13,9 @@
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_gravity="center_vertical"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="50dp"
-        app:srcCompat="@drawable/calculator"
-        android:layout_gravity="center_vertical"/>
+        app:srcCompat="@drawable/calculator" />
 </LinearLayout>
