--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -91,7 +91,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/button_background_v2"
-            android:backgroundTint="#FFFFFF"
+            android:backgroundTint="#FFFF"
             android:drawableLeft="@drawable/baseline_budget"
             android:drawablePadding="8dp"
             android:gravity="start|center_vertical"
@@ -100,7 +100,7 @@
             android:text="Budget Setting"
             android:textAlignment="viewStart"
             android:textAllCaps="false"
-            android:textColor="#000000" />
+            android:textColor="#FFFF" />
 
         <Button
             android:id="@+id/profile_setting_button"
@@ -117,7 +117,7 @@
             android:text="Profile Setting"
             android:textAlignment="viewStart"
             android:textAllCaps="false"
-            android:textColor="#000000" />
+            android:textColor="#FFFF" />
 
         <Button
             android:id="@+id/backup_data_button"
@@ -134,7 +134,7 @@
             android:text="Backup Your Data"
             android:textAlignment="viewStart"
             android:textAllCaps="false"
-            android:textColor="#000000" />
+            android:textColor="#FFFF" />
 
     </LinearLayout>
 
